tests/rosetta/out/Haskell/babylonian-spiral.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/babylonian-spiral.hs:154:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/babylonian-spiral.hs:147:1
                 /workspace/mochi/tests/rosetta/out/Haskell/babylonian-spiral.hs:154:1
    |
154 | main = do
    | ^^^^
